fix of post-meta on mobile

--- a/_sass/post-meta.scss
+++ b/_sass/post-meta.scss
@@ -138,6 +138,7 @@
     padding: 10% 0 15%;
     position: relative;
     height: 86vh;
+    margin-top: 0;
   }
     
   .post-meta-text {
